the design is complete

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
-		"jsx": "react-jsx",
-		"baseUrl": "./" // This must be specified if "paths" is.
+		"jsx": "react-jsx"
 	},
 	"include": ["src"],
 	"references": [{ "path": "./tsconfig.node.json" }]
